[package]
name = "kmsvnc"
version = "0.2.6"
edition = "2021"
description = "A KMS/DRM-based VNC server for Linux"
license = "MIT"
repository = "https://github.com/signal-slot/kmsvnc"

[dependencies]
drm = "0.14"
drm-ffi = "0.9"
drm-fourcc = "2.2"
rustix = { version = "0.38", features = ["mm"] }
input-linux = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "signal"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
des = "0.8"
cipher = "0.4"
rand = "0.9"
